--- a/page1.html
+++ b/page1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Halaman Biodata</title>
+    <title>Halaman Biodata</title> <!--halaman biodata-->
 
     <link rel="stylesheet" href="Style.css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes&family=Send+Flowers&display-swap" rel="stylesheet">
@@ -22,16 +22,15 @@
             <hr>
 
             <video controls width="300" height="500" loop autoplay muted preload="auto">
-                <!-- Pastikan path ke video benar -->
+                <!-- bagian video -->
                 <source src="9convert.com - Taylor Swift  Love Story.mp4" type="video/mp4">
                 <track kind="captions" src="9convert.com - Taylor Swift  Love Story.vtt" srclang="en" label="English">
             </video>
-            
+            <!--sejarah lagu love story-->
             <p>Liriknya menceritakan kisah cinta rumit yang diakhiri dengan lamaran pernikahan, terinspirasi<br>
                 dari seorang pria yang tidak pernah dia kencani. Swift menggunakan plot Romeo and Juliet (1597)<br>
                 oleh William Shakespeare sebagai dasar cerita dalam lagu ini, seperti diceritakan dari perspektif Juliet.</p>
-            
-
+            <!--bagian audio-->
             <h2 id="audio">Audio Taylor's Swift</h2>
             <hr>
  
@@ -40,6 +39,7 @@
 
             </audio>
 
+            <!--bagian gambar-->
             <h2 id="gambar">Gambar Taylor's Swift</h2>
             <hr>
 
@@ -50,12 +50,14 @@
                         <source media="(max-width: 1200px)" srcset="https://th.bing.com/th/id/OIP.UPY503M-ONNORXkMK17ugHaE7?w=2518&h=180&c=7&r=0">
                         <img src="download.jpg" alt="" style="width: auto;">
                     </picture>
+                    <!--asal taylor swift-->
                     <p>Taylor Swift adalah seorang penyanyi, penulis lagu, aktris, dan produser Amerika yang lahir pada tanggal 13 Desember 1989<br> 
                         di Reading, Pennsylvania. Ia mulai mengejar karier musiknya sejak usia remaja dan pada tahun 2006, ia merilis album debutnya<br>
                         yang berjudul “Taylor Swift”. </p>                    
                 </td>
             </tr>
             <tr>
+                <!--button yang menghubungkan ke file form.html-->
                 <td colspan="2" style="text-align: center;">
                     <button type="button" onclick="kirimData()">Click Me</button>
                 </td>
